# OpenCV-FollowTheFaces

./: CMakeCache.txt  CMakeLists.txt  DisplayFaces.cpp  DisplayImage  DisplayImage.cpp  DisplayImage_bak.cpp  FindOpenCV.cmake_bak  LICENSE  LICENSE.txt  Makefile  README.md  cmake_install.cmake
